[package]
name = "key-value"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.68"
maelstrom-node="0.1.6"
log = "0.4.17"
tokio = { version = "1.27.0", features = ["full"] }
tokio-context = "0.1.3"
serde_json = "1.0.141"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rand = "0.9.1"
futures = "0.3.31"
